[package]
name = "hcengine"
version = "0.1.0"
authors = ["hpnlic <hpnlic@hotmail.com>"]
edition = "2021"
description = "net for Rust"
repository = "https://github.com/hcengine/hcnet"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["hcnet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.22"
hcnet = "0.1"
# hclua = {version = "0.1.5", features = ["lua52"]}
hclua = { path = "../hclua", features = ["lua53"] }
hcproto = { path = "../hcproto/Rust" }
algorithm = { path = "../algorithm" }
# algorithm = "0.1.13"
libc = "0.2.162"
env_logger = "0.11.5"
serde_with = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.2"

log4rs = "1.3.0"

bpaf = { version = "0.9.8", features = [
    "derive",
    "extradocs",
    "batteries",
    "autocomplete",
] }
