[package]
name = "hcengine"
version = "0.1.0"
authors = ["hpnlic <hpnlic@hotmail.com>"]
edition = "2021"
description = "net for Rust"
repository = "https://github.com/hcengine/hcengine"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["hcnet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.22"
# hcnet = "0.1"
# hclua = {version = "0.1.5", features = ["lua52"]}
# algorithm = { path = "../algorithm" }
algorithm = { version = "^0.1.18", features = ["ttl"] }
# webparse = "0.3.0"
# wmhttp = "0.3.1"
wmhttp = { path = "../wmhttp" }
webparse = { path = "../webparse" }

redis = { version = "^0.29.5", features = [
    "tokio-rustls-comp",
    "cluster-async",
    "aio",
    "cluster",
] }

hcnet = { path = "../hcnet" }
hclua = { path = "../hclua", features = ["lua54"] }
hclua-cjson = { features = ["lua54"], path = "./luac/hclua-cjson" }
hclua-socket = { features = ["lua54"], path = "./luac/hclua-socket" }

hcproto = { path = "../hcproto/Rust" }

async-trait = "0.1.83"
libc = "0.2.162"
env_logger = "0.11.5"
serde_with = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.2"

log4rs = "1.3.0"

bpaf = { version = "0.9.8", features = [
    "derive",
    "extradocs",
    "batteries",
    "autocomplete",
] }

mysql_async = "0.35.1"
futures-util = "0.3"

hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.22"  

des = "0.7"
block-modes = "0.8"

colored = "3.0.0"
tokio-rustls = "0.26"
# [workspace]
# members = ["hclua-cjson", "hclua-socket"]
